補 ContextMenu po 翻譯: mantis 1209 1211 1212 1213 1214 1216 1217 1218 1210

--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -5,8 +5,13 @@
 "Align Left":"左側對齊",
 "Align Right":"右側對齊",
 "Alig~n":"對齊(~N)",
+"Alphabet Lowercase List":"小寫英文字母清單",
+"Alphabet Uppercase List":"大寫英文字母清單",
 "Anc~hor":"錨定(~H)",
 "Arrange":"編排",
+"Arrange（~F）":"編排",
+"Arrange(~F)":"編排",
+"Arrange (~F)":"編排",
 "As C~haracter":"作為字元(~H)",
 "AutoCorr~ect":"自動校正(~E)",
 "Auto~Filter":"自動篩選(~F)",
@@ -16,10 +21,13 @@
 "Background Color":"背景色彩",
 "Bold":"粗體",
 "Bottom":"底端",
+"Bullet List":"項目符號清單",
+"Caption...":"圖表標示...",
 "Center":"中",
 "Centered":"置中",
 "Ce~lls...":"儲存格(~L)...",
 "Clear ~Direct Formatting":"清除直接格式設定(~D)",
+"Clone Formatting":"拓製格式設定",
 "Columns ~After":"後方插欄(~A)",
 "Columns ~Before":"前方插欄(~B)",
 "Comme~nt":"評註(~N)",
@@ -28,16 +36,21 @@
 "Copy Hyperlink Location":"複製超連結位置",
 "Cop~y":"複製(~Y)",
 "Co~lumns...":"欄(~L)...",
+"Co~mpress...":"壓縮(~M)...",
+"Crop":"裁切",
 "Currency":"貨幣",
 "Current ~Index":"目前的索引(~I)",
 "Cycle Case":"循環轉換大小寫",
 "C~ell":"儲存格(~E)",
+"C~enter":"中(~E)",
+"C~haracter":"字元樣式設定(~H)",
 "C~haracter...":"字元(~H)...",
 "C~onditional":"條件式(~O)",
 "Date":"日期",
 "Decrease Indent":"減小縮排",
 "Decrease Paragraph Spacing":"減少段落間距",
 "Decrease Size":"減少大小",
+"Default ~Character":"預設字元(~C)",
 "Delete All Comments":"刪除所有評註",
 "Delete All Comments by This Author":"刪除此作者的所有評註",
 "Delete Column":"刪除欄",
@@ -52,11 +65,16 @@
 "Demote One Level With Subpoints":"連同子點降一層級",
 "Double Underline":"雙底線",
 "Duplicate ~Slide":"再製投影片(~S)",
+"Edit F~ields...":"編輯欄位指令(~I)...",
+"Edit with External Tool":"以外部工具編輯",
 "E~dit Style...":"編輯樣式(~D)...",
+"E~mphasis":"強調(~M)",
 "Find & Rep~lace...":"尋找與取代(~L)...",
 "Find Next":"找下一個",
 "Find Previous":"找上一個",
 "First ~Author":"第一作者(~A)",
+"Flip Horizontally":"水平翻轉",
+"Flip Vertically":"垂直翻轉",
 "Font Color":"字元色彩",
 "Foote~r":"頁尾(~R)",
 "For All Text":"所有文字",
@@ -69,8 +87,12 @@
 "Formatting Mark":"格式設定標記",
 "Forward One":"上移一層",
 "For~matting Marks":"格式設定標記(~M)",
+"F~ields...":"欄位(~I)...",
 "F~ormat":"格式(~O)",
 "F~ull Screen":"全螢幕(~U)",
+"Heading ~1":"標題 ~1",
+"Heading ~2":"標題 ~2",
+"Heading ~3":"標題 ~3",
 "He~ader":"頁首(~A)",
 "He~ader and Footer":"頁首與頁尾(~A)",
 "H~ide":"隱藏(~I)",
@@ -80,6 +102,7 @@
 "Increase Indent":"擴大縮排",
 "Increase Paragraph Spacing":"增加段落間距",
 "Increase Size":"增加大小",
+"Insert Caption...":"插入圖表標示…",
 "Insert Chart":"插入圖表",
 "Insert Column After":"後方插入欄",
 "Insert Column Before":"前方插入欄",
@@ -128,6 +151,8 @@
 "Number Format: Date":"數字格式：日期",
 "Number Format: Decimal":"數字格式：十進位",
 "Number Format: Percent":"數字格式：百分比",
+"Number List":"編號清單",
+"Numbering Off":"移除項目符號與編號",
 "Open Hyperlink":"開啟超連結",
 "Optimal Column Width":"最適欄寬",
 "Optimal Row Height":"最適列高",
@@ -139,40 +164,53 @@
 "Percent":"百分比",
 "Position and Si~ze...":"位置和大小(~Z)...",
 "Previous Page":"上一頁",
+"Pre~formatted Text":"預設樣式(~F)",
 "Promote One Level":"升一層級",
 "Promote One Level With Subpoints":"連同子點升一層級",
 "Propert~ies...":"屬性(~I)...",
 "Pr~evious":"上一個(~E)",
+"P~aragraph":"段落樣式設定(~A)",
 "P~aragraph...":"段落(~A)...",
+"Qu~otation":"引文(~O)",
 "Reject All":"拒絕全部",
 "Remove Hyperlink":"移除超連結",
 "Reply Comment":"回覆評註",
 "Restart Numbering":"重新開始編號",
 "Right":"右",
 "Right-To-Left":"由右至左",
+"Roman Lowercase List":"小寫羅馬數字清單",
+"Roman Uppercase List":"大寫羅馬數字清單",
+"Rotate 1~80°":"旋轉 1~80°",
 "Rotate 90° ~Left":"向左旋轉 90°(~L)",
 "Rotate 90° ~Right":"向右旋轉 90°(~R)",
 "Rot~ate":"旋轉(~A)",
+"Rot~ate or Flip":"旋轉或翻轉(~A)",
 "Rows ~Above":"上方插列(~A)",
 "Rows ~Below":"下方插列(~B)",
 "Save ~As...":"另存新檔(~A)...",
+"Save...":"儲存...",
 "Select Column":"選取欄",
 "Select Row":"選取列",
 "Select ~All":"全部選取(~A)",
 "Shadow":"陰影",
 "Sho~w Rows":"顯示列(~W)",
+"Size":"大小",
+"Si~ze":"大小",
 "Small capitals":"小型大寫字母",
 "Sort Ascending":"按升序排序",
 "Sort Descending":"按降序排序",
+"Sou~rce Text":"源碼文字(~R)",
 "Split Cells":"分割儲存格",
 "Split Cells...":"分割儲存格...",
 "Strikethrough":"刪除線",
+"St~yle":"表格樣式(~Y)",
 "Subscript":"下標",
 "Superscript":"上標",
 "S~how Columns":"顯示欄(~H)",
 "S~lide":"投影片(~L)",
 "S~oft hyphen":"軟性連字符(~O)",
 "S~pecial Character...":"特殊字元(~P)...",
+"Text Body":"內文",
 "Text Box and Shap~e":"文字方塊與形狀(~E)",
 "Te~xt":"文字(~X)",
 "Time Field":"時間欄位",
@@ -200,10 +238,13 @@
 "~Arrange":"編排(~A)",
 "~Author":"作者(~A)",
 "~Automatic Spell Checking":"自動拼字檢查(~A)",
+"~Bottom":"下(~B)",
 "~Bring to Front":"移動到最上層(~B)",
 "~Bulleted List":"項目符號清單(~B)",
+"~Bullets and Numbering":"項目符號與編號設定(~B)",
 "~Bullets and Numbering...":"項目符號與編號(~B)...",
 "~Capitalize Every Word":"每個字詞的字首大寫(~C)",
+"~Centered":"置中(~C)",
 "~Chart...":"圖表(~C)...",
 "~Clear Direct Formatting":"清除直接指定的格式(~C)",
 "~Column":"欄(~C)",
@@ -217,6 +258,7 @@
 "~Delete Sheet...":"刪除工作表(~D)...",
 "~Delete Slide":"刪除投影片(~D)",
 "~Edit":"編輯(~E)",
+"~Edit Contour...":"編輯輪廓(~E)...",
 "~Edit Style...":"編輯樣式(~E)...",
 "~Endnote":"尾註(~E)",
 "~File":"檔案(~F)",
@@ -234,6 +276,7 @@
 "~Image...":"影像(~I)...",
 "~Index Entry...":"索引條目(~I)...",
 "~Insert":"插入(~I)",
+"~Left":"左(~L)",
 "~Left-to-right mark":"由左至右標示(~L)",
 "~Manage...":"管理(~M)...",
 "~More Fields...":"更多欄位(~M)...",
@@ -252,17 +295,22 @@
 "~Paste":"貼上(~P)",
 "~Print...":"列印(~P)...",
 "~Properties...":"屬性(~P)...",
+"~Table Properties...":"表格屬性(~P)...",
+"~Graphic Properties...":"圖片(~P)...",
 "~Record":"記錄(~R)",
 "~Redo":"再次動作(~R)",
 "~Refresh":"重新整理(~R)",
 "~Remove Outline":"移除大綱(~R)",
 "~Rename Sheet...":"重新命名工作表(~R)...",
+"~Replace...":"取代(~R)...",
 "~Reset Filter":"重設篩選(~R)",
+"~Right":"右(~R)",
 "~Right-to-left mark":"由右至左標示(~R)",
 "~Row":"列(~R)",
 "~Row Break":"斷列(~R)",
 "~Rows":"列(~R)",
 "~Save":"儲存(~S)",
+"~Save...":"儲存(~S)...",
 "~Select":"選取(~S)",
 "~Select...":"選擇(~S)...",
 "~Send to Back":"移動到最下層(~S)",
@@ -275,10 +323,13 @@
 "~Spacing":"間距(~S)",
 "~Spelling...":"拼字檢查(~S)...",
 "~Standard Filter...":"標準篩選(~S)...",
+"~Strong Emphasis":"特別強調(~S)",
 "~Subject":"主題(~S)",
+"~Table":"表格(~T)",
 "~Thesaurus...":"同義詞庫(~T)...",
 "~Time":"時間(~T)",
 "~Tools":"工具(~T)",
+"~Top":"上(~T)",
 "~UPPERCASE":"大寫字母(~U)",
 "~Undo":"取消動作(~U)",
 "~Unformatted Text":"無格式設定的文字(~U)",
