(mts 1224)loleaflet: ContextMenu po 翻譯新增 text： 加入文字方塊, 退出群組, 翻轉, 接點, 進入群組, 群組, 旋轉, 取消群組

--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -1,6 +1,7 @@
 {
 "Accept All":"接受全部",
 "Add Decimal Place":"加入小數點",
+"Add Text Box":"加入文字方塊",
 "Align Center":"置中",
 "Align Left":"左側對齊",
 "Align Right":"右側對齊",
@@ -69,6 +70,7 @@
 "Edit with External Tool":"以外部工具編輯",
 "E~dit Style...":"編輯樣式(~D)...",
 "E~mphasis":"強調(~M)",
+"E~xit Group":"退出群組(~X)",
 "Find & Rep~lace...":"尋找與取代(~L)...",
 "Find Next":"找下一個",
 "Find Previous":"找上一個",
@@ -88,6 +90,7 @@
 "Forward One":"上移一層",
 "For~matting Marks":"格式設定標記(~M)",
 "F~ields...":"欄位(~I)...",
+"F~lip":"翻轉(~L)",
 "F~ormat":"格式(~O)",
 "F~ull Screen":"全螢幕(~U)",
 "Heading ~1":"標題 ~1",
@@ -162,6 +165,7 @@
 "Paste Unformatted Text":"貼上無格式設定的文字",
 "Paste ~Special":"選擇性貼上(~S)",
 "Percent":"百分比",
+"Poi~nts":"接點(~N)",
 "Position and Si~ze...":"位置和大小(~Z)...",
 "Previous Page":"上一頁",
 "Pre~formatted Text":"預設樣式(~F)",
@@ -261,10 +265,12 @@
 "~Edit Contour...":"編輯輪廓(~E)...",
 "~Edit Style...":"編輯樣式(~E)...",
 "~Endnote":"尾註(~E)",
+"~Enter Group":"進入群組(~E)",
 "~File":"檔案(~F)",
 "~First Paragraph":"第一段落(~F)",
 "~Footnote":"註腳(~F)",
 "~Format Cells...":"設定儲存格格式(~F)...",
+"~Group":"群組(~G)",
 "~Group and Outline":"群組與大綱(~G)",
 "~Group...":"群組(~G)...",
 "~Help":"說明(~H)",
@@ -306,6 +312,7 @@
 "~Reset Filter":"重設篩選(~R)",
 "~Right":"右(~R)",
 "~Right-to-left mark":"由右至左標示(~R)",
+"~Rotate":"旋轉(~R)",
 "~Row":"列(~R)",
 "~Row Break":"斷列(~R)",
 "~Rows":"列(~R)",
@@ -333,6 +340,7 @@
 "~UPPERCASE":"大寫字母(~U)",
 "~Undo":"取消動作(~U)",
 "~Unformatted Text":"無格式設定的文字(~U)",
+"~Ungroup":"取消群組(~U)",
 "~Ungroup...":"取消群組(~U)...",
 "~Validity...":"驗證(~V)...",
 "~View":"檢視(~V)",
