1) 右鍵選單：打開全部功能 2) 右鍵選單：l10n 部份翻譯

--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -43,7 +43,7 @@
 "Current ~Index":"目前的索引(~I)",
 "Cycle Case":"循環轉換大小寫",
 "C~ell":"儲存格(~E)",
-"C~enter":"中(~E)",
+"C~enter":"置中對齊錨點(~E)",
 "C~haracter":"字元樣式設定(~H)",
 "C~haracter...":"字元(~H)...",
 "C~onditional":"條件式(~O)",
@@ -110,6 +110,7 @@
 "Insert Column After":"後方插入欄",
 "Insert Column Before":"前方插入欄",
 "Insert Column Break":"插入斷欄",
+"Insert Columns":"插入欄",
 "Insert Columns ~After":"後方插入欄(~A)",
 "Insert Columns ~Before":"前方插入欄(~B)",
 "Insert Comment":"插入評註",
@@ -120,6 +121,7 @@
 "Insert Page ~Break":"插入分頁符(~B)",
 "Insert Row Above":"上方插入列",
 "Insert Row Below":"下方插入列",
+"Insert Rows":"插入列",
 "Insert Rows ~Above":"於上方插入列(~A)",
 "Insert Rows ~Below":"於下方插入列(~B)",
 "Insert Slide":"插入投影片",
@@ -138,6 +140,8 @@
 "Lis~ts":"清單(~T)",
 "L~ine...":"線條(~I)...",
 "Merge Cells":"合併儲存格",
+"Minimal Column Width":"最小欄寬",
+"Minimize Column Width":"最小欄寬",
 "More ~Filters":"更多篩選(~F)",
 "Move Down":"向下移動",
 "Move Down with Subpoints":"連同子點向下移動",
@@ -189,6 +193,7 @@
 "Rotate 90° ~Right":"向右旋轉 90°(~R)",
 "Rot~ate":"旋轉(~A)",
 "Rot~ate or Flip":"旋轉或翻轉(~A)",
+"Row Height...":"列高...",
 "Rows ~Above":"上方插列(~A)",
 "Rows ~Below":"下方插列(~B)",
 "Save ~As...":"另存新檔(~A)...",
@@ -242,18 +247,20 @@
 "~Arrange":"編排(~A)",
 "~Author":"作者(~A)",
 "~Automatic Spell Checking":"自動拼字檢查(~A)",
-"~Bottom":"下(~B)",
+"~Bottom":"向下對齊錨點(~B)",
 "~Bring to Front":"移動到最上層(~B)",
 "~Bulleted List":"項目符號清單(~B)",
 "~Bullets and Numbering":"項目符號與編號設定(~B)",
 "~Bullets and Numbering...":"項目符號與編號(~B)...",
 "~Capitalize Every Word":"每個字詞的字首大寫(~C)",
-"~Centered":"置中(~C)",
+"~Centered":"水平置中(~C)",
 "~Chart...":"圖表(~C)...",
 "~Clear Direct Formatting":"清除直接指定的格式(~C)",
 "~Column":"欄(~C)",
 "~Column Break":"斷欄(~C)",
+"~Column Width...":"欄寬(~C)...",
 "~Columns":"欄(~C)",
+"~Columns...":"欄(~C)...",
 "~Contour":"輪廓(~C)",
 "~Cut":"剪下(~C)",
 "~Data":"資料(~D)",
@@ -282,7 +289,7 @@
 "~Image...":"影像(~I)...",
 "~Index Entry...":"索引條目(~I)...",
 "~Insert":"插入(~I)",
-"~Left":"左(~L)",
+"~Left":"向左對齊(~L)",
 "~Left-to-right mark":"由左至右標示(~L)",
 "~Manage...":"管理(~M)...",
 "~More Fields...":"更多欄位(~M)...",
@@ -310,12 +317,13 @@
 "~Rename Sheet...":"重新命名工作表(~R)...",
 "~Replace...":"取代(~R)...",
 "~Reset Filter":"重設篩選(~R)",
-"~Right":"右(~R)",
+"~Right":"向右對齊(~R)",
 "~Right-to-left mark":"由右至左標示(~R)",
 "~Rotate":"旋轉(~R)",
 "~Row":"列(~R)",
 "~Row Break":"斷列(~R)",
 "~Rows":"列(~R)",
+"~Rows...":"列(~R)...",
 "~Save":"儲存(~S)",
 "~Save...":"儲存(~S)...",
 "~Select":"選取(~S)",
@@ -336,7 +344,7 @@
 "~Thesaurus...":"同義詞庫(~T)...",
 "~Time":"時間(~T)",
 "~Tools":"工具(~T)",
-"~Top":"上(~T)",
+"~Top":"向上對齊錨點(~T)",
 "~UPPERCASE":"大寫字母(~U)",
 "~Undo":"取消動作(~U)",
 "~Unformatted Text":"無格式設定的文字(~U)",
