更新繁體中文翻譯

--- a/loleaflet/l10n/locore/zh-TW.json
+++ b/loleaflet/l10n/locore/zh-TW.json
@@ -533,6 +533,7 @@
 "Spanish (Venezuela)":"西班牙文 (委內瑞拉)",
 "StDev":"標準差",
 "Standard selection":"標準選取",
+"Starts":"星形",
 "Strong Emphasis":"特別強調",
 "Subtitle":"副題",
 "Sum":"總和",
@@ -542,6 +543,7 @@
 "Swazi":"史瓦濟蘭文",
 "Swedish (Finland)":"瑞典文 (芬蘭)",
 "Swedish (Sweden)":"瑞典文 (瑞典)",
+"Symbols":"符號",
 "Table":"表格",
 "Table Contents":"表格內容",
 "Table Heading":"表格標題",
