--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -1601,7 +1601,7 @@
     "Record": "記錄條目",
     "Record Macro": "記錄巨集",
     "Record Track Changes": "記錄追蹤修訂",
-    "Rectangle": "Rectangle",
+    "Rectangle": "矩形",
     "Rectangle Redaction": "Rectangle Redaction",
     "Rectangle, Rounded": "矩形，圓角",
     "Rectangle, Unfilled": "矩形，未填滿",
