修正繁體中文翻譯

--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -97,7 +97,7 @@
     "Anchor: To ~Cell": "定位：至儲存格(~C)",
     "Anc~hor": "定位(~H)",
     "Anc~hor...": "定位(~H)…",
-    "Animated Image...": "動畫式影像...",
+    "Animated Image...": "動畫式圖片...",
     "Animation": "動畫",
     "Appear": "現身",
     "Application": "應用程式",
@@ -235,7 +235,7 @@
     "Cell Edit": "儲存格編輯",
     "Cell Edit Mode": "儲存格編輯模式",
     "Cell Protection": "儲存格保護",
-    "Cell ~Comments": "儲存格評註(~C)",
+    "Cell ~Comments": "儲存格註解(~C)",
     "Center": "中央",
     "Center Horizontal": "水平置中",
     "Center Revolve": "中央旋進",
@@ -335,18 +335,18 @@
     "Comb": "梳紋",
     "Combo Box": "複合方塊",
     "Comb~ine": "結合(~I)",
-    "Comment": "評註",
-    "Comments": "評註",
-    "Comments...": "評註...",
-    "Comme~nt": "評註(~N)",
-    "Comm~ent": "評註(~E)",
+    "Comment": "註解",
+    "Comments": "註解",
+    "Comments...": "註解...",
+    "Comme~nt": "註解(~N)",
+    "Comm~ent": "註解(~E)",
     "Compare": "比對",
     "Compare Non-Track Changed Document": "比對未追蹤修訂的文件",
     "Compile": "編譯",
     "Complementary Color": "互補色彩",
     "Complementary Color 2": "互補色彩 2",
     "Compress": "壓縮",
-    "Compress Image": "壓縮影像",
+    "Compress Image": "壓縮圖片",
     "Condition...": "條件...",
     "Conditional Formatting...": "條件式格式設定...",
     "Conditional Formatting: Color Scale": "條件式格式設定：色階",
@@ -402,8 +402,8 @@
     "Crescent Moon": "新月形",
     "Crop": "裁切",
     "Crop Dialog...": "裁切對話方塊...",
-    "Crop Image": "裁切影像",
-    "Crop Image Dialog...": "裁切影像對話方塊...",
+    "Crop Image": "裁切圖片",
+    "Crop Image Dialog...": "裁切圖片對話方塊...",
     "Cross": "十字形",
     "Cross-fading...": "畫面交錯...",
     "Cross-reference...": "交叉參照...",
@@ -487,12 +487,12 @@
     "Define Print Area": "定義列印區塊",
     "Define ~Labels...": "定義標籤(~L)...",
     "Delete": "刪除",
-    "Delete All Comments": "刪除所有評註",
-    "Delete All Comments by This Author": "刪除此作者的所有評註",
+    "Delete All Comments": "刪除所有註解",
+    "Delete All Comments by This Author": "刪除此作者的所有註解",
     "Delete Axis": "刪除軸",
     "Delete Column": "刪除欄",
     "Delete Columns": "刪除欄",
-    "Delete Comment": "刪除評註",
+    "Delete Comment": "刪除註解",
     "Delete C~ells...": "刪除儲存格(~E)...",
     "Delete C~ontents...": "刪除內容(~O)...",
     "Delete Data Labels": "刪除資料標籤",
@@ -527,7 +527,7 @@
     "Delete to Start of Paragraph": "刪除至段落的起頭",
     "Delete to Start of Sentence": "刪除至段落的起始處",
     "Delete to Start of Word": "刪除至字詞起頭",
-    "Delete ~All Comments": "刪除所有評註(~D)",
+    "Delete ~All Comments": "刪除所有註解(~D)",
     "Delete ~Record": "刪除記錄條目(~R)",
     "Demote": "降級",
     "Demote One Level": "降一層級",
@@ -601,7 +601,7 @@
     "Ease In": "小心移入",
     "Ease Out": "小心移出",
     "Edit": "編輯",
-    "Edit Comment": "編輯評註",
+    "Edit Comment": "編輯註解",
     "Edit Data": "編輯資料",
     "Edit Footnote\/Endnote": "編輯註腳\/尾註",
     "Edit FrameSet": "編輯框架",
@@ -676,7 +676,7 @@
     "Export Directly to PDF as Bitmap": "Export Directly to PDF as Bitmap",
     "Export as EPUB": "匯出為 EPUB",
     "Export as E~PUB...": "匯出為 E~PUB...",
-    "Export as Image": "匯出為影像",
+    "Export as Image": "匯出為圖片",
     "Export as PDF": "匯出為 PDF",
     "Expor~t...": "匯出(~T)...",
     "Extended Selection On": "開啟擴充選取",
@@ -750,7 +750,7 @@
     "Flicker": "火影搖曳",
     "Flip": "翻轉",
     "Flip Horizontally": "水平翻轉",
-    "Flip Images on Even Pages": "翻轉偶數頁面上的影像",
+    "Flip Images on Even Pages": "翻轉偶數頁面上的圖片",
     "Flip Vertically": "垂直翻轉",
     "Float": "浮動",
     "Float~ing Frame...": "浮動外框(~I)...",
@@ -830,7 +830,7 @@
     "Form...": "表單...",
     "FormControls": "表單控制項",
     "Format": "格式",
-    "Format All Comments": "設定所有評註格式",
+    "Format All Comments": "設定所有註解格式",
     "Format Axis...": "設定軸格式...",
     "Format Cell Borders": "設定儲存格邊框格式",
     "Format Chart Area...": "設定圖表區塊格式...",
@@ -1012,8 +1012,8 @@
     "He~ader": "頁首(~A)",
     "He~ader and Footer": "頁首與頁尾(~A)",
     "Hide": "隱藏",
-    "Hide All Comments": "隱藏所有評註",
-    "Hide Comment": "隱藏評註",
+    "Hide All Comments": "隱藏所有註解",
+    "Hide Comment": "隱藏註解",
     "Hide Subpoints": "隱藏子點",
     "Hide Whitespac~e": "隱藏空白(~E)",
     "Highlight Color": "標明色彩",
@@ -1037,15 +1037,15 @@
     "H~ide Columns": "隱藏欄(~I)",
     "H~ide Rows": "隱藏列(~I)",
     "Icon Set...": "圖示集...",
-    "Image": "影像",
+    "Image": "圖片",
     "Image Button": "圖式按鈕",
     "Image Control": "圖式控制項",
-    "Image Filter": "影像篩選",
-    "Image Mode": "影像模式",
-    "Image Placeholders": "影像佔位項",
-    "Image Properties": "影像屬性...",
-    "Image...": "影像…",
-    "Image~Map": "影像映射(~M)",
+    "Image Filter": "圖片篩選",
+    "Image Mode": "圖片模式",
+    "Image Placeholders": "圖片佔位項",
+    "Image Properties": "圖片屬性...",
+    "Image...": "圖片…",
+    "Image~Map": "圖片映射(~M)",
     "Import Basic": "匯入 Basic 源碼",
     "Import Dialog": "匯入對話方塊",
     "Import MathML from Clipboard": "從剪貼簿匯入 MathML",
@@ -1090,12 +1090,12 @@
     "Insert Columns ~After": "後方插入欄(~A)",
     "Insert Columns ~Before": "前方插入欄(~B)",
     "Insert Command": "插入指令",
-    "Insert Comment": "插入評註",
+    "Insert Comment": "插入註解",
     "Insert Controls": "插入控制項",
     "Insert Co~lumns": "插入欄(~L)",
     "Insert Co~lumns After": "後方插入欄(~L)",
     "Insert Co~lumns Before": "前方插入欄",
-    "Insert Co~mment": "插入評註(~M)",
+    "Insert Co~mment": "插入註解(~M)",
     "Insert Cross-reference": "插入交叉參照",
     "Insert Current Date": "插入目前的日期",
     "Insert Current Time": "插入目前的時間",
@@ -1113,7 +1113,7 @@
     "Insert Glue Point": "插入接著點",
     "Insert Header": "插入頁首",
     "Insert Hyperlink": "插入超連結",
-    "Insert Image...": "插入影像...",
+    "Insert Image...": "插入圖片...",
     "Insert Index Entry": "插入索引條目",
     "Insert Labels": "插入標籤",
     "Insert Layer": "插入圖層",
@@ -1155,7 +1155,7 @@
     "Insert Text Box": "插入文字方塊",
     "Insert Text Frame": "插入文字外框",
     "Insert Titles...": "插入題名...",
-    "Insert Track Change Comment": "插入追蹤修訂評註",
+    "Insert Track Change Comment": "插入追蹤修訂註解",
     "Insert Trend Line ~Equation": "插入趨勢線方程式(~E)",
     "Insert Tre~nd Line...": "插入趨勢線(~N)...",
     "Insert Unnumbered Entry": "插入不帶編號的條目",
@@ -1388,7 +1388,7 @@
     "New ~View Design": "新檢視設計(~V)",
     "Newsflash": "新聞快報",
     "Next": "下一個",
-    "Next Comment": "下一評註",
+    "Next Comment": "下一註解",
     "Next Element": "下個元素",
     "Next Mail Merge Entry": "下一個郵件合併條目",
     "Next Page": "下一頁",
@@ -1534,14 +1534,14 @@
     "Posterize": "海報",
     "Preformatted Text Paragraph Style": "已先格式設定文字段落樣式",
     "Presentation": "簡報",
-    "Presentation Image Options": "簡報影像選項",
+    "Presentation Image Options": "簡報圖片選項",
     "Presentation Options": "簡報選項",
     "Presentation ~Object...": "簡報物件(~O)…",
     "Preview": "預覽",
     "Preview Dialog": "預覽對話方塊",
     "Preview Zoom": "預覽遠近調整",
     "Preview in Web Browser": "在網頁瀏覽器中預覽",
-    "Previous Comment": "上一評註",
+    "Previous Comment": "上一註解",
     "Previous Element": "上個元素",
     "Previous Mail Merge Entry": "上一個郵件合併條目",
     "Previous Page": "上一頁",
@@ -1649,7 +1649,7 @@
     "Rename...": "重新命名...",
     "Repeat Search": "重複搜尋",
     "Repea~t": "重複(~T)",
-    "Replace Image": "取代影像",
+    "Replace Image": "取代圖片",
     "Replace with Button": "以按鈕取代",
     "Replace with Check Box": "以核取方塊取代",
     "Replace with Combo Box": "以複合方塊取代",
@@ -1670,7 +1670,7 @@
     "Replace with Spin Button": "以微調按鈕取代",
     "Replace with Text Box": "以文字方塊取代",
     "Replace with Time Field": "以時間欄位取代",
-    "Reply Comment": "回覆評註",
+    "Reply Comment": "回覆註解",
     "Report": "報表",
     "Report As Email...": "Report As Email...",
     "Report Controls": "報表控制項",
@@ -1752,10 +1752,10 @@
     "SQL": "SQL",
     "SQL...": "SQL...",
     "Sanitized PDF": "Sanitized PDF",
-    "Save Background Image...": "儲存背景影像...",
+    "Save Background Image...": "儲存背景圖片...",
     "Save Document": "儲存文件",
     "Save Document as URL": "另存文件為 URL",
-    "Save Image": "儲存影像",
+    "Save Image": "儲存圖片",
     "Save Merged Documents": "儲存合併的文件",
     "Save Record": "儲存記錄條目",
     "Save Remote File": "儲存遠端檔案",
@@ -1847,7 +1847,7 @@
     "Send Feedback": "傳送意見回饋",
     "Send via ~Bluetooth...": "透過藍牙傳送(~B)...",
     "Sen~d": "傳送(~D)",
-    "Set Background Image...": "設定背景影像...",
+    "Set Background Image...": "設定背景圖片...",
     "Set Chapter Numbering": "設定章節標號",
     "Set Character Spacing": "設定字元間距",
     "Set Cursor To Anchor": "將游標設定至定位處",
@@ -1877,10 +1877,10 @@
     "Shift": "移動",
     "Shift+Backspace": "Shift+Backspace",
     "Shimmer": "微閃爍",
-    "Show All Comments": "顯示所有評註",
+    "Show All Comments": "顯示所有註解",
     "Show All Levels": "顯示所有層級",
-    "Show Comment": "顯示評註",
-    "Show Comme~nts": "顯示評註(~N)",
+    "Show Comment": "顯示註解",
+    "Show Comme~nts": "顯示註解(~N)",
     "Show Draw Functions": "顯示繪圖功能",
     "Show Formatting": "顯示格式設定",
     "Show Formula": "顯示公式",
@@ -1998,7 +1998,7 @@
     "Standard Toolbar": "標準工具列",
     "Star Shapes": "星形狀",
     "Stars and Banners": "星星和綵帶",
-    "Start Image Editor": "啟動影像編輯器",
+    "Start Image Editor": "啟動圖片編輯器",
     "Start from C~urrent Slide": "從目前投影片開始(~U)",
     "Start from ~First Slide": "從第一張投影片開始(~F)",
     "Start media": "啟動媒體",
@@ -2343,7 +2343,7 @@
     "View Design...": "檢視設計...",
     "View Grid Lines": "檢視格線",
     "View Headers": "檢視欄標列號",
-    "View Images and Charts": "檢視影像與圖表",
+    "View Images and Charts": "檢視圖片與圖表",
     "View Panel": "檢視面板",
     "Views Tab ~Bar": "檢視標籤列(~B)",
     "Vortex": "漩渦",
@@ -2435,7 +2435,7 @@
     "~Column Width...": "欄寬(~C)...",
     "~Columns": "欄(~C)",
     "~Columns...": "欄(~C)...",
-    "~Comment...": "評註(~C)...",
+    "~Comment...": "註解(~C)...",
     "~Conditional Formatting...": "條件式格式設定(~C)...",
     "~Connector...": "連接線(~C)...",
     "~Consolidate...": "合併計算(~C)...",
@@ -2462,7 +2462,7 @@
     "~Define Range...": "定義範圍(~D)...",
     "~Define...": "定義(~D)...",
     "~Delete": "刪除(~D)",
-    "~Delete Comment": "刪除評註(~D)",
+    "~Delete Comment": "刪除註解(~D)",
     "~Delete Pivot Table": "刪除樞紐分析表(~D)",
     "~Delete Sheet...": "刪除工作表(~D)...",
     "~Delete Slide": "刪除投影片(~D)",
@@ -2503,7 +2503,7 @@
     "~Footnote": "註腳(~F)",
     "~Footnote or Endnote...": "註腳或尾註(~F)...",
     "~Footnotes and Endnotes...": "註腳與尾註(~F)...",
-    "~Format All Comments...": "設定所有評註格式(~F)…",
+    "~Format All Comments...": "設定所有註解格式(~F)…",
     "~Format Cells...": "設定儲存格格式(~F)...",
     "~Forms": "表單(~F)",
     "~Formula": "公式(~F)",
@@ -2542,9 +2542,9 @@
     "~Hyperlink...": "超連結(~H)...",
     "~Hyphenation": "斷字處理(~H)",
     "~Hyphenation...": "斷字處理(~H)...",
-    "~Image": "影像(~I)",
-    "~Image...": "影像(~I)...",
-    "~Images and Charts": "影像與圖表(~I)",
+    "~Image": "圖片(~I)",
+    "~Image...": "圖片(~I)...",
+    "~Images and Charts": "圖片與圖表(~I)",
     "~Import Formula...": "匯入公式(~I)...",
     "~Index Design...": "索引設計(~I)...",
     "~Index Entry...": "索引條目(~I)...",
