--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oxool (3.2.4-1.master) unstable; urgency=low
+
+  * Release 3.2.4
+
+ -- Firefly <firefly@ossii.com.tw>  Tue, 25 Feb 2020 12:55:45 +0800
+
 oxool (3.2.3-1.master) unstable; urgency=low
 
   * Release 3.2.3
