--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oxool (3.2.5-1.master) unstable; urgency=low
+
+  * Release 3.2.5
+
+ -- Firefly <firefly@ossii.com.tw>  Wed, 25 Mar 2020 15:08:33 +0800
+
 oxool (3.2.4-1.master) unstable; urgency=low
 
   * Release 3.2.4
