更新正體中文翻譯

--- a/loleaflet/l10n/uno/zh-TW.json
+++ b/loleaflet/l10n/uno/zh-TW.json
@@ -2705,7 +2705,7 @@
     "~Properties...": "屬性(~P)",
     "~Protect Document": "保護文件(~P)",
     "~Protect...": "保護(~P)",
-    "~QR Code...": "~QR 碼...",
+    "~QR Code...": "~QR 碼",
     "~Quotations": "引文(~Q)",
     "~Recalculate": "重新計算(~R)",
     "~Recheck Document...": "重新檢查文件(~R)",
