--- a/man/oxoolconvert.1
+++ b/man/oxoolconvert.1
@@ -17,4 +17,4 @@ oxoolconvert OPTIONS FILE(S)
 \fB\-\-no\-check\-certificate\fR  Disable checking of SSL certs
 .PP
 .SH "SEE ALSO"
-oxoolwsd(1), oxoolforkit(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolwsd-generate-proof-key(1), oxoolmount(1)
+oxoolwsd(1), oxoolforkit(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolmount(1)
