--- a/man/oxoolwsd.1
+++ b/man/oxoolwsd.1
@@ -31,4 +31,4 @@ oxoolwsd OPTIONS
 \fB\-\-nocaps\fR                       Use a non\-privileged forkit, with increase in security problems.
 .PP
 .SH "SEE ALSO"
-oxoolforkit(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolwsd-generate-proof-key(1), oxoolmount(1)
+oxoolforkit(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolmount(1)
