--- a/man/oxoolforkit.1
+++ b/man/oxoolforkit.1
@@ -8,4 +8,4 @@ Single-threaded process that spawns LibreOfficeKit (LOK) instances.
 .PP
 \fBNote\fR: Running this standalone is not possible. It is spawned by oxoolwsd and is controlled via a pipe.
 .SH "SEE ALSO"
-oxoolwsd(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolwsd-generate-proof-key(1), oxoolmount(1)
+oxoolwsd(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolmount(1)
