--- a/man/oxoolmount.1
+++ b/man/oxoolmount.1
@@ -8,4 +8,4 @@ This is a very tiny helper to allow overlay mounting.
 .PP
 \fBNote\fR: Running this standalone is not possible. It is used internally by oxoolwsd when it creates the jail for the document.
 .SH "SEE ALSO"
-oxoolwsd(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolwsd-generate-proof-key(1), oxoolforkit(1)
+oxoolwsd(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolforkit(1)
