--- a/man/oxoolwsd-systemplate-setup.1
+++ b/man/oxoolwsd-systemplate-setup.1
@@ -6,4 +6,4 @@ oxoolwsd-systemplate-setup <chroot template directory for system libs to create>
 .SH DESCRIPTION
 oxoolwsd-systemplate-setup creates a minimal system template for running the LibreOfficeKit in a chroot jail. The system template contains the bare minimum of system libraries to run LibreOfficeKit, and also fonts and locale data from the system.
 .SH "SEE ALSO"
-oxoolforkit(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd(1), oxoolwsd-generate-proof-key(1), oxoolmount(1)
+oxoolforkit(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd(1), oxoolmount(1)
