Add cli option to use settings from env variables
Currently [in docker it is possible to do configuration through
environment variables](https://col.la/dockercodeconfigviaenv), which
works using the start-collabora-online.sh start-collabora-online.pl
scripts. This commit lets OXOOLWSD listen to the same environment
variables directly

Change-Id: I75762ad620132037523fa82167a3ff17075c7027
Signed-off-by: Skyler Grey <skyler.grey@collabora.com>

--- a/man/oxoolwsd.1
+++ b/man/oxoolwsd.1
@@ -30,5 +30,7 @@ oxoolwsd OPTIONS
 .PP
 \fB\-\-nocaps\fR                       Use a non\-privileged forkit, with increase in security problems.
 .PP
+\fB\-\-use\-env\-vars\fR                Override oxoolwsd.xml config with options from the environment variables described in https://col.la/dockercodeconfigviaenv
+.PP
 .SH "SEE ALSO"
 oxoolforkit(1), oxoolconvert(1), oxoolconfig(1), oxoolwsd-systemplate-setup(1), oxoolmount(1)
