--- a/browser/po/ui-an.po
+++ b/browser/po/ui-an.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2020-08-04 07:34+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fito@libreoffice.org>\n"
 "Language-Team: Aragonese <https://weblate.documentfoundation.org/projects/"
-"libo_online/cool-ui/an/>\n"
+"libo_online/oxool-ui/an/>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
