--- a/browser/po/ui-jv.po
+++ b/browser/po/ui-jv.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2020-01-26 05:49+0000\n"
 "Last-Translator: Budi Aryo <venera.android.phone@gmail.com>\n"
 "Language-Team: Javanese <https://weblate.documentfoundation.org/projects/"
-"libo_online/cool-ui/jv/>\n"
+"libo_online/oxool-ui/jv/>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
