--- a/ossii/browser/po/zh_TW.po
+++ b/ossii/browser/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-07 21:29+0800\n"
+"POT-Creation-Date: 2024-04-09 15:04+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,25 +19,25 @@ msgstr ""
 #: js/map/handler/Map.AlternativeCommand.js:400
 #: js/map/handler/Map.AlternativeCommand.js:993
 msgid "Are you sure you want to delete this slide?"
-msgstr ""
+msgstr "確定刪除本張投影片？"
 
 #: js/map/handler/Map.AlternativeCommand.js:403
 #: js/map/handler/Map.AlternativeCommand.js:996
 msgid "Are you sure you want to delete this page?"
-msgstr ""
+msgstr "確定刪除本頁？"
 
 #: js/map/handler/Map.AlternativeCommand.js:405
 #: js/map/handler/Map.AlternativeCommand.js:998
 #: js/control/Control.ContextMenu.js:215
 msgid "Delete"
-msgstr ""
+msgstr "刪除"
 
 #: js/map/handler/Map.AlternativeCommand.js:406
 #: js/map/handler/Map.AlternativeCommand.js:999
 #: js/control/Control.Dialogs.js:115 js/control/Control.Dialogs.js:151
 #: js/control/Control.Dialogs.js:199
 msgid "OK"
-msgstr ""
+msgstr "確定"
 
 #: js/control/Toolbar.Extensions.js:132 js/control/Toolbar.Extensions.js:142
 #: js/control/Toolbar.Extensions.js:150 js/control/Toolbar.Extensions.js:157
@@ -114,29 +114,29 @@ msgstr ""
 
 #: js/control/Toolbar.Extensions.js:739
 msgid "Saving..."
-msgstr ""
+msgstr "存檔中…"
 
 #: js/control/Control.Dialogs.js:122 js/control/Control.Dialogs.js:206
 msgid "Cancel"
-msgstr ""
+msgstr "放棄"
 
 #: js/control/Control.Dialogs.js:245
 msgid "Close"
-msgstr ""
+msgstr "關閉"
 
 #: js/control/Control.ContextMenu.js:140
 msgid "Command"
-msgstr ""
+msgstr "命令"
 
 #: js/control/Control.Menubar.js:11 js/control/Control.Menubar.js:65
 #: js/control/Control.Menubar.js:121 js/control/Control.Menubar.js:167
 msgid "Search"
-msgstr ""
+msgstr "搜尋"
 
 #: js/control/Control.Menubar.js:15 js/control/Control.Menubar.js:69
 #: js/control/Control.Menubar.js:125 js/control/Control.Menubar.js:171
 msgid "Share..."
-msgstr ""
+msgstr "分享…"
 
 #: js/control/Control.Menubar.js:16 js/control/Control.Menubar.js:70
 #: js/control/Control.Menubar.js:127 js/control/Control.Menubar.js:172
@@ -151,12 +151,12 @@ msgstr ""
 #: js/control/Control.Menubar.js:129 js/control/Control.Menubar.js:176
 #: js/control/Control.ReadonlyBar.js:159
 msgid "Download as"
-msgstr ""
+msgstr "下載爲…"
 
 #: js/control/Control.Menubar.js:21 js/control/Control.Menubar.js:74
 #: js/control/Control.Menubar.js:129 js/control/Control.Menubar.js:176
 msgid "Export as"
-msgstr ""
+msgstr "匯出爲…"
 
 #: js/control/Control.Menubar.js:27
 msgid "EPUB (.epub)"
@@ -165,7 +165,7 @@ msgstr ""
 #: js/control/Control.Menubar.js:32 js/control/Control.Menubar.js:84
 #: js/control/Control.Menubar.js:136 js/control/Control.Menubar.js:185
 msgid "Repair"
-msgstr ""
+msgstr "修復"
 
 #: js/control/Control.Menubar.js:56
 msgid "Page Setup"
@@ -185,27 +185,43 @@ msgstr ""
 #: js/control/Control.Menubar.js:163 js/control/Control.Menubar.js:230
 #: js/control/Control.ReadonlyBar.js:177
 msgid "About"
-msgstr ""
+msgstr "關於"
 
 #: js/control/Control.Menubar.js:113
 msgid "Fullscreen presentation"
-msgstr ""
+msgstr "全螢幕播放"
 
 #: js/control/Control.Menubar.js:729
 msgid "None (Do not check spelling)"
-msgstr ""
+msgstr "無（不檢查語法）"
 
 #: js/control/Control.Menubar.js:735
 msgid "Reset to Default Language"
-msgstr ""
+msgstr "重設回預設語言"
 
 #: js/control/Control.Menubar.js:773
 msgid "Insert Shape"
-msgstr ""
+msgstr "插入圖案"
 
 #: js/control/Control.ReadonlyBar.js:65
 msgid "Close document"
-msgstr ""
+msgstr "關閉檔案"
+
+#: admin/js/color-scheme-switcher.js:26
+msgid "Follow system settings"
+msgstr "依據系統設定"
+
+#: admin/js/color-scheme-switcher.js:30
+msgid "Light Mode"
+msgstr "淺色模式"
+
+#: admin/js/color-scheme-switcher.js:34
+msgid "Dark Mode"
+msgstr "深色模式"
+
+#: admin/js/color-scheme-switcher.js:191
+msgid "Current color scheme"
+msgstr "目前配色"
 
 #: admin/js/global.js:37
 msgid "Account"
@@ -223,41 +239,25 @@ msgstr "登入"
 msgid "OSS Integral Institute Co., Ltd."
 msgstr "晟鑫科技股份有限公司"
 
-#: admin/js/global.js:100
+#: admin/js/global.js:99
 msgid "Show password"
 msgstr "顯示密碼"
 
-#: admin/js/global.js:100
+#: admin/js/global.js:99
 msgid "Hide password"
 msgstr "隱藏密碼"
 
-#: admin/js/color-scheme-switcher.js:26
-msgid "Follow system settings"
-msgstr "依據系統設定"
-
-#: admin/js/color-scheme-switcher.js:30
-msgid "Light mode"
-msgstr "淺色模式"
-
-#: admin/js/color-scheme-switcher.js:34
-msgid "Dark mode"
-msgstr "深色模式"
-
-#: admin/js/color-scheme-switcher.js:191
-msgid "Current color scheme"
-msgstr "目前配色"
-
 #: admin/src/AdminSocketBase.js:53
 msgid "Server has been shut down; Waiting to be back online."
-msgstr ""
+msgstr "伺服器已經關閉，等待重新上線…"
 
 #: admin/src/AdminSocketBase.js:68
 msgid "Connection error"
-msgstr ""
+msgstr "連線錯誤"
 
 #: admin/src/AdminSocketBase.js:75
 msgid "Try to reconnect..."
-msgstr ""
+msgstr "嘗試重新連線"
 
 #: admin/src/Util.js:14
 msgid "kB"
